# threat-correlator

./: .gitignore  Dockerfile  README.md  generate_demo_logs.py  pyproject.toml  requirements-extra.txt
.github/workflows/: ci.yml
config/: config.example.yaml  config.local.yaml.example  config.yaml  default.yaml
data/: iocs.db  static_malware_feed.json  test_log.txt  test_logs.json  test_logs.jsonl
docs/: PORTFOLIO_OVERVIEW.md  architecture.md
logs/: example_log.jsonl  example_windows.xml
sampledata/: README.txt  example_log.jsonl  example_windows.xml  iocs.db  static_malware_feed.json  test_logs.json
src/threatcorrelator/: __init__.py  cli.py  config_loader.py  correlate.py  correlator.py  country_lookup.py  country_map.py  dashboard.py  database.py  enrichment.py  fetch.py  generate_test_log.py  logging_config.py  mitre_map.py  storage.py
tests/: test_cli.py  test_cli_commands.py  test_config_loader.py  test_correlate_logs.py  test_correlate_logs_sample.py  test_correlator.py  test_dashboard_and_cli.py  test_end_to_end.py  test_enrichment.py  test_enrichment_errors.py  test_enrichment_utils.py  test_fetch.py  test_fetch_errors.py  test_fetcher_api.py  test_generate_test_log_errors.py  test_mitre_map.py  test_mitre_mapping_utils.py  test_windows_xml.py
