[project]
name = "threatcorrelator"
version = "0.1.0"
description = ""
authors = [
    {name = "Alex",email = "61612663+AlexZimpher@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click (>=8.2.1,<9.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)"
]

[tool.poetry]
packages = [{include = "threatcorrelator", from = "src"}]


[tool.poetry.group.dev.dependencies]
streamlit = "^1.45.1"
pandas = "^2.2.3"
plotly = "^6.1.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
threatcorrelator = "threatcorrelator.cli:cli"

